--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -1,3 +1,14 @@
+/* The following class will outline all 
+   containers, a debugging and learning tool - 
+
+* {
+    border: 1px solid red !important;
+    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+*/
 
 
 .site-content {
@@ -6,9 +17,14 @@
 }
 
 .site-font {
-     font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
+.center-block {
+    display: block;  
+    margin-right: auto;  
+    margin-left: auto;  
+}
 /*
     Style to fix the issue of text 
     extending past panel length
